# BlockVerse

./: .gitignore  Cargo.toml  README.md  deploy.sh  dfx.json  package-lock.json  package.json
src/BlockVerse_backend/: BlockVerse_backend.did  Cargo.toml
src/BlockVerse_backend/src/: lib.rs
src/BlockVerse_backend/src/models/: comment.rs  post.rs  user.rs
src/BlockVerse_backend/src/services/: comment_service.rs  mod.rs  payment_service.rs  post_service.rs  user_service.rs
src/BlockVerse_backend/src/storage/: state.rs
src/BlockVerse_backend/src/utils/: crypto.rs  validation.rs
src/BlockVerse_frontend/: index.html  package.json
src/BlockVerse_frontend/src/: App.jsx  main.jsx
src/BlockVerse_frontend/src/components/auth/: AuthGuard.jsx  LoginButton.jsx
src/BlockVerse_frontend/src/components/common/: Header.jsx  Loadingspinner.jsx  Modal.jsx  Sidebar.jsx
src/BlockVerse_frontend/src/components/feed/: CreatePost.jsx  Feed.jsx  PostCard.jsx  PostDetails.jsx
src/BlockVerse_frontend/src/components/payments/: TipButton.jsx  WalletBalance.jsx
src/BlockVerse_frontend/src/components/profile/: EditProfile.jsx  FollowButton.jsx  ProfilePage.jsx
src/BlockVerse_frontend/src/context/: AuthContext.jsx  ThemeContext.jsx
src/BlockVerse_frontend/src/hooks/: usePosts.js  useWebSockets.js
src/BlockVerse_frontend/src/services/: api.js  auth.js  payments.js
src/BlockVerse_frontend/src/styles/: globals.css
src/BlockVerse_frontend/src/utils/: constants.js  formatters.js  helpers.js
