[package]
name = "BlockVerse_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.17"
ic-cdk-macros = "0.7"
ic-stable-structures = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = "0.3"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }

[dependencies.ic-cdk-timers]
version = "0.1"

[dependencies.getrandom]
version = "0.2"
features = ["custom"]